--- a/config.yml
+++ b/config.yml
@@ -25,9 +25,10 @@ pipeline:
     entity_name: some_random_entity_name
 
 policies:
-  - name: MemoizationPolicy
-  - name: RulePolicy
-  - name: TEDPolicy
+  - name: components.policies.memoization.MemoizationPolicy
+  - name: components.policies.rule_policy.RulePolicy
+  - name: components.policies.ted_policy.TEDPolicy
     max_history: 5
     epochs: 100
     constrain_similarities: true
+
